--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                         <div class="row">
                             <div class="col-12 ">
                                 <div class="d-none d-lg-block scroll-item">
-                                    <i class="bi bi-mouse me-2 align-middle"></i><span class="scroll-text">Scroll
-                                        Down</span>
+                                    <i class="bi bi-mouse me-2 align-middle"></i><span class="scroll-text">Scroll Down</span>
                                 </div>
                             </div>
                         </div>
