--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="row">
+                <div class="row">
                     <div class="map">
                         <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0"
                             marginwidth="0"
@@ -524,13 +524,13 @@
                         </iframe>
                         
                     </div>
-                </div> -->
+                </div>
                 <div class="footer d-md-none">
                     <div class="container">
                         <div class="row justify-content-start align-items-end">
                             <div class="col-9">
                                 <span>© 2022-23 Design by 
-                                    <a href="" title="Firmbee - Online Remote working app for collaboration & task management" target="_blank">Gabriel Samutumwa</a>
+                                    <a title="Firmbee - Online Remote working app for collaboration & task management" target="_blank">Gabriel Samutumwa</a>
                                 </span>
                             </div>
                         </div>
