--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                                     </div>
                                     <div class="col-9">
                                         <span>© 2022-23 Design by 
-                                            <a href="" title="Firmbee - Online Remote working app for collaboration & task management" target="_blank">Gabriel Samutumwa</a>
+                                            <a title="Firmbee - Online Remote working app for collaboration & task management" target="_blank">Gabriel Samutumwa</a>
                                         </span>
                                     </div>
                                 </div>
