--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                         <div class="row justify-content-start align-items-end">
                             <div class="col-9">
                                 <span>© 2022-23 Design by 
-                                    <a title="Firmbee - Online Remote working app for collaboration & task management">Gabriel Samutumwa</a>
+                                    <a href="" title="Firmbee - Online Remote working app for collaboration & task management">Gabriel Samutumwa</a>
                                 </span>
                             </div>
                         </div>
