--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         Portfolio</a>
                                 </div>
                                 <!-- <div class="col-7 col-sm-3 col-lg-5">
-                                    <a class="button text-center" href="Gabriel Samutumwa CV.pdf" download="">Download CV</a>
+                                    <a class="button text-center" href="" download="">Download CV</a>
                                 </div> -->
                                  <div class="col-7 col-sm-3 col-lg-5">
                                     <a class="button text-center" target="_blank"  href="https://github.com/gabrielsamutumwa"><i class="bi bi-github"></i>Github</a>
