--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                         class="bi bi-list"></i></button>
                 <div class="collapse navbar-collapse shadow-bg" id="navbarNavAltMarkup">
                     <div class="navbar-nav p-5">
-                        <a class="nav-item nav-link active text-center mx-3" href="index.html#home">Home</a>
+                        <a class="nav-item nav-link active text-center mx-3" href="./index.html#home">Home</a>
                         <a class="nav-item nav-link text-center mx-3" href="./index.html#portfolio">Portfolios</a>
                         <a class="nav-item nav-link text-center mx-3" href="./index.html#team">Team</a>
                         <a class="nav-item nav-link text-center mx-3" href="#contact">Contact</a>
