--- a/portfolio.html
+++ b/portfolio.html
@@ -55,11 +55,11 @@
                         </div>
                         <div class="col-12">
                             <div class="header">
-                                <div class="header-text">
+                                <!-- <div class="header-text">
                                     <h1>
                                         We <span class="highlighted">work</span> creatively
                                     </h1>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="row justify-content-lg-start justify-content-center buttons">
                                 <div class="col-7 col-sm-3 col-lg-5">
