--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,9 @@
                     <div class="left col-12 col-lg-4">
                         <div class="col-4 d-none d-lg-block">
                             <div class="logo">
-                                
+                                <h2>
+                                    <!-- Welcome  -->
+                                </h2>
                             </div>
                         </div>
                         <div class="col-12">
