--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                                         portfolio</a>
                                 </div>
                                 <div class="col-7 col-sm-3 col-lg-5">
-                                    <a class="button text-center" href="#contact">Contact</a>
+                                    <a class="button text-center" href="#contact"><i class="bi bi-github"></i>GithubContact</a>
                                 </div>
                             </div>
                         </div>
