--- a/index.html
+++ b/index.html
@@ -466,9 +466,9 @@
                                         <a href="https://twitter.com/phenomenalgabe?t=TqMsKG5aYciaCF4PGSbFPQ&s=08" target="_blank">
                                             <i class="bi bi-twitter"></i>
                                         </a>
-                                        <a href="https://zm.linkedin.com/in/gabriel-samutumwa" target="_blank">
+                                        <!-- <a href="https://zm.linkedin.com/in/gabriel-samutumwa" target="_blank">
                                             <i class="bi bi-linkedin"></i>
-                                        </a>
+                                        </a> -->
                                         <a href="https://wa.me/260950407579" target="_blank">
                                             <i class="bi bi-whatsapp"></i>
                                         </a>
