--- a/index.html
+++ b/index.html
@@ -463,9 +463,9 @@
                                         <a href="https://www.facebook.com/Gabriel.Samutumwa" target="_blank">
                                             <i class="bi bi-facebook"></i>
                                         </a>
-                                        <a href="https://twitter.com/phenomenalgabe?t=TqMsKG5aYciaCF4PGSbFPQ&s=08" target="_blank">
+                                        <!-- <a href="https://twitter.com/phenomenalgabe?t=TqMsKG5aYciaCF4PGSbFPQ&s=08" target="_blank">
                                             <i class="bi bi-twitter"></i>
-                                        </a>
+                                        </a> -->
                                         <!-- <a href="https://zm.linkedin.com/in/gabriel-samutumwa" target="_blank">
                                             <i class="bi bi-linkedin"></i>
                                         </a> -->
