--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
                                 <div class="col-12 col-lg-4">
                                     <p>Social Media</p>
                                     <p class="warning">
-                                        <a href="https://www.instagram.com/phenomenal_gabe/?hl=en" target="_blank">
+                                        <!-- <a href="https://www.instagram.com/phenomenal_gabe/?hl=en" target="_blank">
                                             <i class="bi bi-instagram"></i>
-                                        </a>
+                                        </a> -->
                                         <!-- <a href="https://www.facebook.com/Gabriel.Samutumwa" target="_blank">
                                             <i class="bi bi-facebook"></i>
                                         </a> -->
