--- a/index.html
+++ b/index.html
@@ -457,12 +457,12 @@
                                 <div class="col-12 col-lg-4">
                                     <p>Social Media</p>
                                     <p class="warning">
-                                        <!-- <a href="https://www.instagram.com/phenomenal_gabe/?hl=en" target="_blank">
-                                            <i class="bi bi-instagram"></i>
-                                        </a> -->
-                                        <!-- <a href="https://www.facebook.com/Gabriel.Samutumwa" target="_blank">
+                                            <!-- <a href="https://www.instagram.com/phenomenal_gabe/?hl=en" target="_blank">
+                                                <i class="bi bi-instagram"></i>
+                                            </a> -->
+                                        <a href="https://www.facebook.com/Gabriel.Samutumwa" target="_blank">
                                             <i class="bi bi-facebook"></i>
-                                        </a> -->
+                                        </a>
                                         <!-- <a href="https://twitter.com/phenomenalgabe?t=TqMsKG5aYciaCF4PGSbFPQ&s=08" target="_blank">
                                             <i class="bi bi-twitter"></i>
                                         </a> -->
