--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> v
 </head>
 <body data-spy="scroll" data-target="#navbar">
     <!-- Navigation -->
