--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                     <div class="container">
                         <div class="row justify-content-start align-items-end">
                             <div class="col-9">
-                                <span>© 2022-23 Design by 
+                                <span>© 2024 Design by 
                                     <a href="" title="Firmbee - Online Remote working app for collaboration & task management">Gabriel Samutumwa</a>
                                 </span>
                             </div>
